--- a/index.html
+++ b/index.html
@@ -11,6 +11,31 @@
 <body>
     <header>
         <!-- header -->
+        <div>
+            <ul>
+                <li class="logo">
+                    <img src="#        <a href=" # ">Logo</a>
+                </li>
+                <li>
+                    <a href="# ">Home</a>
+                </li>
+                <li>
+                    <a href="# ">About</a>
+                </li>
+                <li>
+                    <a href="# ">Contact</a>
+                </li>
+                <li>
+                    <a href="# ">Service</a>
+                </li>
+                <li>
+                    <a href="# ">Sutudent</a>
+                </li>
+            </ul>
+        </div>
+
+
+
     </header>
 
 
@@ -25,11 +50,13 @@
 
 
     <section>
-        <!-- Goals Section -->
+        <!-- Service -->
+
     </section>
 
 
     <section>
+        <!-- Goals Section -->
         <!-- Achievement section -->
     </section>
 
@@ -41,6 +68,7 @@
 
     <footer>
         <!-- footer section -->
+         
     </footer>
 
 </body>
