--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Computer Lab</title>
-    <link rel="stylesheet" href="CSS/Style.css">
+    <link rel="stylesheet" href="CSS/Style.css" />
 </head>
 
 <body>
@@ -14,63 +14,58 @@
         <div>
             <ul>
                 <li class="logo">
-                    <img src="#        <a href=" # ">Logo</a>
-                </li>
-                <li>
-                    <a href="# ">Home</a>
-                </li>
-                <li>
-                    <a href="# ">About</a>
-                </li>
-                <li>
-                    <a href="# ">Contact</a>
-                </li>
-                <li>
-                    <a href="# ">Service</a>
-                </li>
-                <li>
-                    <a href="# ">Sutudent</a>
-                </li>
-            </ul>
-        </div>
-
-
-
+                    <img src="# <a href=" # ">Logo</a></li>
+          <li>
+            <a href="# ">Home</a>
+          </li>
+          <li>
+            <a href="# ">About</a>
+          </li>
+          <li>
+            <a href="# ">Contact</a>
+          </li>
+          <li>
+            <a href="# ">Service</a>
+          </li>
+          <li>
+            <a href="# ">Sutudent</a>
+          </li>
+        </ul>
+      </div>
     </header>
 
-
     <section>
-        <!-- Home section -->
+      <!-- Home section -->
     </section>
 
-
     <section>
-        <!-- About section -->
+      <!-- About section -->
     </section>
 
-
     <section>
-        <!-- Service -->
-
+      <!-- Service -->
     </section>
 
-
     <section>
-        <!-- Goals Section -->
-        <!-- Achievement section -->
+      <!-- Goals Section -->
+      <!-- Achievement section -->
     </section>
 
-
     <section>
-        <!-- Form/Contact Secion -->
+      <!-- Form/Contact Secion -->
     </section>
-
 
     <footer>
-        <!-- footer section -->
-         
+      <!-- footer section -->
+      <div>
+        <div class="copyright ">
+          <p>
+            Copyright ©2024 Group-5 (ComputerLab) All Rights Reserved. Made by
+            Computer Science Group-5
+          </p>
+          <img src=" " alt="github Logo " />
+        </div>
+      </div>
     </footer>
-
-</body>
-
+  </body>
 </html>
