--- a/index.html
+++ b/index.html
@@ -36,6 +36,33 @@
 
     <section>
         <!-- Form/Contact Secion -->
+        <div class="container">
+            <fieldset>
+
+                <form>
+                    <h3>Contact form</h3>
+
+                    <input type="text" id="FirstName" placeholder="First Name" required>
+                    <br>
+                    <br>
+                    <input type="text" id="LastName" placeholder="Last Name" required>
+                    <br>
+                    <br>
+                    <input type="email" id="email" placeholder="email" required>
+                    <br>
+                    <br>
+                    <input type="number" id="phonenumber" placeholder="phone number" required>
+                    <br>
+                    <br>
+                    <h4>Type your comment here....</h4>
+                    <textarea name="" id="" cols="100" rows="15"></textarea>
+                    <br>
+                    <br>
+                    <input type="submit" value="send" id="button">
+                </form>
+
+            </fieldset>
+        </div>
     </section>
 
 
