update one code

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
    
 
     
-      <h3> Hosted 50+ Workshops</h3>
+      <h3> Hosted  Workshops</h3>
       <p>Covering topics like programming, cybersecurity, and hardware repair.</p>
    
 
