--- a/index.html
+++ b/index.html
@@ -11,95 +11,97 @@
 <body>
   <header>
     <!-- header -->
-    <div>
-      <ul>
-        <li class="logo">
-          <img src="# <a href=" # ">Logo</a></li>
-          <li>
-            <a href=" # ">Home</a>
-          </li>
-          <li>
-            <a href=" # ">About</a>
-          </li>
-          <li>
-            <a href=" # ">Contact</a>
-          </li>
-          <li>
-            <a href=" # ">Service</a>
-          </li>
-          <li>
-            <a href=" # ">Student</a>
-          </li>
-        </ul>
+    <nav>
+      <div class="logo">
+        <a href="#"> <img src="" alt=""></a>
       </div>
-    </header>
+      <ul>
 
-    <section>
-      <!-- Home section -->
-    </section>
+        <li>
+          <a href=" # ">Home</a>
+        </li>
+        <li>
+          <a href=" # ">About</a>
+        </li>
+        <li>
+          <a href=" # ">Contact</a>
+        </li>
+        <li>
+          <a href=" # ">Service</a>
+        </li>
+        <li>
+          <a href=" # ">Student</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
 
-    <section>
-      <!-- About section -->
-    </section>
+  <section>
+    <!-- Home section -->
+  </section>
 
-    <section>
-      <!-- Service -->
-    </section>
+  <section>
+    <!-- About section -->
+  </section>
 
-    <section>
-      <!-- Goals Section -->
-      <!-- Achievement section -->
-    </section>
+  <section>
+    <!-- Service -->
+  </section>
 
-    <section>
-<<<<<<< HEAD
-        <!-- Form/Contact Secion -->
-        <div class=" container">
+  <section>
+    <!-- Goals Section -->
+    <!-- Achievement section -->
+  </section>
+
+  <section>
+
+    <!-- Form/Contact Secion -->
+    <div class=" container">
 
 
-          <form class="form">
-            <h3>Contact form</h3>
+      <form class="form">
+        <h3>Contact form</h3>
 
-            <input type="text" id="FirstName" placeholder="First Name" required>
-            <br>
-            <br>
-            <input type="text" id="LastName" placeholder="Last Name" required>
-            <br>
-            <br>
-            <input type="email" id="email" placeholder="email" required>
-            <br>
-            <br>
-            <input type="number" id="phonenumber" placeholder="phone number" required>
-            <br>
-            <br>
-            <h4>Type your comment here....</h4>
-            <textarea name="" id="add" cols="100" rows="15"></textarea>
-            <br>
-            <br>
-            <div class="button">
-              <input type="submit" value="send" id="button">
-            </div>
-          </form>
+        <input type="text" id="FirstName" placeholder="First Name" required>
+        <br>
+        <br>
+        <input type="text" id="LastName" placeholder="Last Name" required>
+        <br>
+        <br>
+        <input type="email" id="email" placeholder="email" required>
+        <br>
+        <br>
+        <input type="number" id="phonenumber" placeholder="phone number" required>
+        <br>
+        <br>
+        <h4>Type your comment here....</h4>
+        <textarea name="" id="add" cols="100" rows="15"></textarea>
+        <br>
+        <br>
+        <div class="button">
+          <input type="submit" value="send" id="button">
+        </div>
+      </form>
 
 
     </div>
-    =======
-    <!-- Form/Contact Secion -->
-    >>>>>>> da5af5cc5bc8f3d084b56df0d75e5d43a6fa2f41
-    </section>
 
-    <footer>
-      <!-- footer section -->
-      <div>
-        <div class="copyright ">
-          <p>
-            Copyright ©2024 Group-5 (ComputerLab) All Rights Reserved. Made by
-            Computer Science Group-5
-          </p>
-          <img src=" " alt="github Logo " />
-        </div>
+    <!-- Form/Contact Secion -->
+
+  </section>
+
+  <footer>
+    <!-- footer section -->
+    <div>
+      <div class="copyright ">
+        <p>
+          Copyright ©2024 Group-5 (ComputerLab) All Rights Reserved. Made by
+          Computer Science Group-5
+        </p>
+        <img src=" " alt="github Logo " />
       </div>
-    </footer>
+    </div>
+  </footer>
 </body>
 
 </html>
