--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
 
     <section>
         <!-- Home section -->
+         <div id="home">
+        <h2>Welcome to Arsi University Computer Lab Management System</h2>
+        <p>This system helps manage the computer labs efficiently and effectively.</p>
+        <img src="" alt="Computer Lab">
+         </div>
     </section>
 
 
