--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
          <div id="home">
         <h2>Welcome to Arsi University Computer Lab Management System</h2>
         <p>This system helps manage the computer labs efficiently and effectively.</p>
-        <img src="" alt="Computer Lab">
+        <img src="" alt="Computer Lab">bjjjhhb
          </div>
     </section>
 
