--- a/index.html
+++ b/index.html
@@ -2,91 +2,79 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Computer Lab</title>
-  <link rel="stylesheet" href="CSS/Style.css" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Computer Lab</title>
+    <link rel="stylesheet" href="CSS/Style.css" />
 </head>
 
 <body>
-  <header>
-    <!-- header -->
-    <nav>
-      <div class="logo">
-        <a href="#"> <img src="" alt=""></a>
-      </div>
-      <ul>
+    <header>
+        <!-- header -->
+        <nav>
+            <div class="logo">
+                <a href="#"> <img src="" alt=""></a>
+            </div>
+            <ul>
 
-        <li>
-          <a href=" # ">Home</a>
-        </li>
-        <li>
-          <a href=" # ">About</a>
-        </li>
-        <li>
-          <a href=" # ">Contact</a>
-        </li>
-        <li>
-          <a href=" # ">Service</a>
-        </li>
-        <li>
-          <a href=" # ">Student</a>
-        </li>
-      </ul>
-    </nav>
-  </header>
-
-  <section>
-    <!-- Home section -->
-  </section>
-
-  <section>
-    <!-- About section -->
-  </section>
-
-  <section>
-    <!-- Service -->
-  </section>
-
-  <section>
-    <!-- Goals Section -->
-    <!-- Achievement section -->
-  </section>
-
-  <section>
-
-    <!-- Form/Contact Secion -->
-    <div class=" container">
+                <li>
+                    <a href=" # ">Home</a>
+                </li>
+                <li>
+                    <a href=" # ">About</a>
+                </li>
+                <li>
+                    <a href=" # ">Contact</a>
+                </li>
+                <li>
+                    <a href=" # ">Service</a>
+                </li>
+                <li>
+                    <a href=" # ">Student</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
 
 
     <section>
+
         <!-- Home section -->
-         <div id="home">
-        <h2>Welcome to Arsi University Computer Lab Management System</h2>
-        <p>This system helps manage the computer labs efficiently and effectively.</p>
-        <img src="" alt="Computer Lab">
-         </div>
+        <div id="home">
+            <h2>Welcome to Arsi University Computer Lab Management System</h2>
+            <p>This system helps manage the computer labs efficiently and effectively.</p>
+            <img src="" alt="Computer Lab">
+        </div>
+
+
     </section>
 
+    <section>
+        <!-- Service -->
+    </section>
 
-    </div>
+    <section>
+        <!-- Goals Section -->
+        <!-- Achievement section -->
+    </section>
 
-    <!-- Form/Contact Secion -->
+    <section>
 
-  </section>
+        <!-- About Section -->
 
-  <footer>
-    <!-- footer section -->
-    <div>
-      <div class="copyright ">
-        <p>
-          Copyright ©2024 Group-5 (ComputerLab) All Rights Reserved. Made by
-          Computer Science Group-5
-        </p>
-        <img src=" " alt="github Logo " />
-      </div>
-    </div>
-  </footer>
+    </section>
+
+    <footer>
+        <!-- footer section -->
+        <div>
+            <div class="copyright ">
+                <p>
+                    Copyright ©2024 Group-5 (ComputerLab) All Rights Reserved. Made by Computer Science Group-5
+                </p>
+                <img src=" " alt="github Logo " />
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
