--- a/index.html
+++ b/index.html
@@ -54,24 +54,44 @@
   </section>
 
   <section>
-
     <!-- Form/Contact Secion -->
-    <div class=" container">
+    <div class="container">
 
-
-    <section>
-        <!-- Home section -->
-         <div id="home">
-        <h2>Welcome to Arsi University Computer Lab Management System</h2>
-        <p>This system helps manage the computer labs efficiently and effectively.</p>
-        <img src="" alt="Computer Lab">
-         </div>
-    </section>
-
+      <form id="add">
+        <h3>Contact form</h3>
+        <input type="text" id="FirstName" placeholder="First Name" required>
+        <br>
+        <br>
+        <input type="text" id="LastName" placeholder="Last Name" required>
+        <br>
+        <br>
+        <input type="email" id="email" placeholder="email" required>
+        <br>
+        <br>
+        <input type="number" id="phonenumber" placeholder="phone number" required>
+        <br>
+        <br>
+        <h4>Type your comment here....</h4>
+        <textarea name="" id="" cols="100" rows="15"></textarea>
+        <br>
+        <br>
+        <input type="submit" value="send" id="button">
+      </form>
 
     </div>
+  </section>
+  <!-- Home section -->
+  <div id="home">
+    <h2>Welcome to Arsi University Computer Lab Management System</h2>
+    <p>This system helps manage the computer labs efficiently and effectively.</p>
+    <img src="" alt="Computer Lab">
+  </div>
+  </section>
 
-    <!-- Form/Contact Secion -->
+
+  </div>
+
+  <!-- Form/Contact Secion -->
 
   </section>
 
