--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <!-- Form/Contact Secion -->
     <div class="container">
 
-      <form id="add">
+      <form>
         <h3>Contact form</h3>
         <input type="text" id="FirstName" placeholder="First Name" required>
         <br>
@@ -72,7 +72,7 @@
         <br>
         <br>
         <h4>Type your comment here....</h4>
-        <textarea name="" id="" cols="100" rows="15"></textarea>
+        <textarea name="" id="add" cols="100" rows="15"></textarea>
         <br>
         <br>
         <input type="submit" value="send" id="button">
