--- a/index.html
+++ b/index.html
@@ -147,6 +147,60 @@
 
     <footer>
         <!-- footer section -->
+        <div>
+
+            <div>
+                <h3> Links</h3>
+                <ul>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#services">Services</a></li>
+                    <li><a href="https://www.arsiuniversity.edu" target="_blank">Arsi University</a></li>
+                </ul>
+            </div>
+
+
+            <div>
+                <h3>Contact Us</h3>
+
+                <p>Email: support@arsiuniversity.edu</p>
+                <p>Phone: +123-456-7890</p>
+            </div>
+
+
+            <div>
+                <h3>Social Media Links</h3>
+                <a href="https://facebook.com/arsiuniversity" target="_blank">Facebook</a> |
+                <a href="https://twitter.com/arsiuniversity" target="_blank">Twitter</a> |
+                <a href="https://linkedin.com/school/arsiuniversity" target="_blank">LinkedIn</a>
+            </div>
+
+
+            <div>
+                <h3>Subscription</h3>
+                <form>
+                    <label for="newsletter">Subscribe to our newsletter:</label><br>
+                    <input type="email" id="newsletter" placeholder="Enter your email" required>
+                    <button type="submit">Subscribe</button>
+                </form>
+            </div>
+
+
+            <div>
+                <h3>Location: Arsi University, Ethiopia </h3>
+
+                <p><a href="https://goo.gl/maps/example" target="_blank">View on Map</a></p>
+            </div>
+
+
+            <div>
+                <h3>Privacy Policy & Terms</h3>
+                <a href="privacy-policy.html">Privacy Policy</a> |
+                <a href="terms-of-service.html">Terms of Service</a>
+            </div>
+            <p>Follow us on social media for updates and events.</p>
+
+        </div>
 
         <div>
             <div class="copyright ">
