--- a/index.html
+++ b/index.html
@@ -97,7 +97,8 @@
 
             <h3> Collaboration with Tech Giants</h3>
             <p>Partnered with leading companies like Microsoft and Google for events and internships.</p>
-            <p creating good and comfortable environment for students </div>
+            <p>creating good and comfortable environment for students</p>
+        </div>
     </section>
 
     <section>
@@ -127,40 +128,9 @@
 
         </div>
     </section>
-
-
-
-
-    </div>
-
-    <!-- Form/Contact Secion -->
-
-<<<<<<< Updated upstream
     <!-- About Section -->
 
     </section>
-=======
-      <form>
-        <h3>Contact form</h3>
-        <input type="text" id="FirstName" placeholder="First Name" required>
-        <br>
-        <br>
-        <input type="text" id="LastName" placeholder="Last Name" required>
-        <br>
-        <br>
-        <input type="email" id="email" placeholder="email" required>
-        <br>
-        <br>
-        <input type="number" id="phonenumber" placeholder="phone number" required>
-        <br>
-        <br>
-        <h4>Type your comment here....</h4>
-        <textarea name="" id="add" cols="100" rows="8"></textarea>
-        <br>
-        <br>
-        <input type="submit" value="send" id="button">
-      </form>
->>>>>>> Stashed changes
 
     </div>
     </section>
