--- a/index.html
+++ b/index.html
@@ -93,8 +93,6 @@
             <h3> Hosted Workshops</h3>
             <p>Covering topics like programming, cybersecurity, and hardware repair.</p>
 
-
-
             <h3> Collaboration with Tech Giants</h3>
             <p>Partnered with leading companies like Microsoft and Google for events and internships.</p>
             <p>creating good and comfortable environment for students</p>
@@ -134,9 +132,6 @@
 
     </div>
     </section>
-
-
-
 
     <footer>
         <!-- footer section -->
@@ -198,8 +193,8 @@
         <div>
             <div class="copyright ">
                 <p>
-                    Copyright ©2024 Group-5 (ComputerLab) All Rights Reserved. Made by Computer Science Group-5
-                </p>
+                    Copyright ©2024 Group-5 (ComputerLab) All Rights Reserved. Made by Computer Science Group-5 </p>
+
                 <img src=" " alt="github Logo " />
             </div>
         </div>
