--- a/index.html
+++ b/index.html
@@ -50,7 +50,42 @@
     <section>
         <!-- Service -->
     </section>
-
+    <section id="schedule">
+        <div class="wrapper">
+            <h2 class="lab">Lab Schedule</h2>
+            <table style="border-radius: 20px;">
+                <thead>
+                    <tr>
+                        <th>Day</th>
+                        <th>Time</th>
+                        <th>Session</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Monday</td>
+                        <td>2:30 AM - 6:00 AM</td>
+                        <td>Introduction to Programming</td>
+                    </tr>
+                    <tr>
+                        <td>Tuesday</td>
+                        <td>1:00 PM - 3:00 PM</td>
+                        <td>java programming</td>
+                    </tr>
+                    <tr>
+                        <td>Thursday</td>
+                        <td>10:00 AM - 12:00 PM</td>
+                        <td>web programing</td>
+                    </tr>
+                    <tr>
+                        <td>Friday</td>
+                        <td>10:00 AM - 12:00 PM</td>
+                        <td>Operating System</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </section>
     <section>
         <!-- Goals Section -->
 
