--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
             <div>
                 <h3>Location: Arsi University, Ethiopia </h3>
 
-                <p><a href="https://goo.gl/maps/example" target="_blank">View on Map</a></p>
+                <p><a href="https://maps.app.goo.gl/ZqdzbsXYDTTjqF1CA" target="_blank">View on Map</a></p>
             </div>
 
 
