--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <!-- header -->
         <nav>
             <div class="logo">
-                <a href="#"> <img src="" alt=""></a>
+                <a href="image/logo.jpeg"> <img src="" alt=""></a>
             </div>
             <ul>
 
@@ -230,7 +230,7 @@
                 <p>
                     Copyright ©2024 Group-5 (ComputerLab) All Rights Reserved. Made by Computer Science Group-5 </p>
 
-                <img src=" " alt="github Logo " />
+                <img src="image/github.png" alt="github Logo " />
             </div>
         </div>
     </footer>
