--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <!-- header -->
         <nav>
             <div class="logo">
-                <a href="image/logo.jpeg"> <img src="" alt=""></a>
+                <a href=""> <img src="image/logo.jpeg" alt=""></a>
             </div>
             <ul>
 
