--- a/index.html
+++ b/index.html
@@ -1,86 +1,239 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Computer Lab</title>
     <link rel="stylesheet" href="CSS/Style.css" />
-  </head>
+</head>
 
-  <body>
+<body>
     <header>
-      <!-- header -->
-      <nav>
-        <div class="logo">
-          <a href="#"> <img src="" alt="" /></a>
-        </div>
-        <ul>
-          <li>
-            <a href=" # ">Home</a>
-          </li>
-          <li>
-            <a href=" # ">About</a>
-          </li>
-          <li>
-            <a href=" # ">Contact</a>
-          </li>
-          <li>
-            <a href=" # ">Service</a>
-          </li>
-          <li>
-            <a href=" # ">Student</a>
-          </li>
-        </ul>
-      </nav>
+        <!-- header -->
+        <nav>
+            <div class="logo">
+                <a href=""> <img src="image/logo.jpeg" alt=""></a>
+            </div>
+            <ul>
+
+                <a href=" # ">Home</a>
+                </li>
+                <li>
+                    <a href=" # ">About</a>
+                </li>
+                <li>
+                    <a href=" # ">Contact</a>
+                </li>
+                <li>
+                    <a href=" # ">Service</a>
+                </li>
+                <li>
+                    <a href=" # ">Student</a>
+                </li>
+            </ul>
+        </nav>
     </header>
 
     <section>
-      <!-- Home section -->
-    </section>
-
-    <section>
-      <!-- About section -->
-    </section>
-
-    <section>
-      <!-- Service -->
-    </section>
-
-    <section>
-      <!-- Goals Section -->
-      <!-- Achievement section -->
-    </section>
-
-    <section>
-      <!-- Form/Contact Secion -->
-      <div class="container">
-        <section>
-          <!-- Home section -->
-          <div id="home">
+        <!-- Home section -->
+        <div id="home">
             <h2>Welcome to Arsi University Computer Lab Management System</h2>
-            <p>
-              This system helps manage the computer labs efficiently and
-              effectively.
-            </p>
-            <img src="" alt="Computer Lab" />
-          </div>
-        </section>
-      </div>
+            <p>This system helps manage the computer labs efficiently and effectively.</p>
+            <img src="" alt="Computer Lab">
+        </div>
+    </section>
+    <section>
+        <!-- About section -->
+    </section>
 
-      <!-- Form/Contact Secion -->
+    <section>
+        <!-- Service -->
+    </section>
+    <section id="schedule">
+        <div class="wrapper">
+            <h2 class="lab">Lab Schedule</h2>
+            <table style="border-radius: 20px;">
+                <thead>
+                    <tr>
+                        <th>Day</th>
+                        <th>Time</th>
+                        <th>Session</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Monday</td>
+                        <td>2:30 AM - 6:00 AM</td>
+                        <td>Introduction to Programming</td>
+                    </tr>
+                    <tr>
+                        <td>Tuesday</td>
+                        <td>1:00 PM - 3:00 PM</td>
+                        <td>java programming</td>
+                    </tr>
+                    <tr>
+                        <td>Thursday</td>
+                        <td>10:00 AM - 12:00 PM</td>
+                        <td>web programing</td>
+                    </tr>
+                    <tr>
+                        <td>Friday</td>
+                        <td>10:00 AM - 12:00 PM</td>
+                        <td>Operating System</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </section>
+    <section>
+        <!-- Goals Section -->
+
+        <h2>Our Goals</h2>
+
+        <div class="content">
+            <h3> Provide Access to Cutting-Edge Technology</h3>
+            <p>Ensure students have access to the latest hardware and software for learning and innovation.</p>
+
+
+
+            <h3> Promote Digital Literacy</h3>
+            <p>Offer training programs to enhance programming, cybersecurity, and IT skills.</p>
+
+
+
+            <h3> Foster Industry Collaboration</h3>
+            <p>Build partnerships with tech companies to provide real-world learning opportunities.</p>
+
+
+
+            <h3>Encourage Innovation</h3>
+            <p>Create a platform for students to develop, showcase, and implement their technical ideas.</p>
+
+
+            <!-- Achievement section -->
+            <h2>Our Achievement</h2>
+
+
+            <h3> best Lab of the Year 2025</h3>
+            <p>Awarded for excellence in education and resource management at Arsi University</p>
+
+
+
+            <h3> initiate Successful Projects</h3>
+            <p>Projects developed by students, including apps, websites, and AI models.</p>
+
+
+
+            <h3> Hosted Workshops</h3>
+            <p>Covering topics like programming, cybersecurity, and hardware repair.</p>
+
+            <h3> Collaboration with Tech Giants</h3>
+            <p>Partnered with leading companies like Microsoft and Google for events and internships.</p>
+            <p>creating good and comfortable environment for students</p>
+        </div>
+    </section>
+
+    <section>
+        <!-- Form/Contact Secion -->
+        <div class="container">
+
+            <form>
+                <h3>Contact form</h3>
+                <input type="text" id="FirstName" placeholder="First Name" required>
+                <br>
+                <br>
+                <input type="text" id="LastName" placeholder="Last Name" required>
+                <br>
+                <br>
+                <input type="email" id="email" placeholder="email" required>
+                <br>
+                <br>
+                <input type="number" id="phonenumber" placeholder="phone number" required>
+                <br>
+                <br>
+                <h4>Type your comment here....</h4>
+                <textarea name="" id="add" cols="100" rows="15"></textarea>
+                <br>
+                <br>
+                <input type="submit" value="send" id="button">
+            </form>
+
+        </div>
+    </section>
+    <!-- About Section -->
+
+    </section>
+
+    </div>
     </section>
 
     <footer>
-      <!-- footer section -->
-      <div>
-        <div class="copyright">
-          <p>
-            Copyright ©2024 Group-5 (ComputerLab) All Rights Reserved. Made by
-            Computer Science Group-5
-          </p>
-          <img src=" " alt="github Logo " />
+        <!-- footer section -->
+        <div>
+
+            <div>
+                <h3> Links</h3>
+                <ul>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#services">Services</a></li>
+                    <li><a href="https://www.arsiuniversity.edu" target="_blank">Arsi University</a></li>
+                </ul>
+            </div>
+
+
+            <div>
+                <h3>Contact Us</h3>
+
+                <p>Email: support@arsiuniversity.edu</p>
+                <p>Phone: +123-456-7890</p>
+            </div>
+
+
+            <div>
+                <h3>Social Media Links</h3>
+                <a href="https://facebook.com/arsiuniversity" target="_blank">Facebook</a> |
+                <a href="https://twitter.com/arsiuniversity" target="_blank">Twitter</a> |
+                <a href="https://linkedin.com/school/arsiuniversity" target="_blank">LinkedIn</a>
+            </div>
+
+
+            <div>
+                <h3>Subscription</h3>
+                <form>
+                    <label for="newsletter">Subscribe to our newsletter:</label><br>
+                    <input type="email" id="newsletter" placeholder="Enter your email" required>
+                    <button type="submit">Subscribe</button>
+                </form>
+            </div>
+
+
+            <div>
+                <h3>Location: Arsi University, Ethiopia </h3>
+
+                <p><a href="https://maps.app.goo.gl/ZqdzbsXYDTTjqF1CA" target="_blank">View on Map</a></p>
+            </div>
+
+
+            <div>
+                <h3>Privacy Policy & Terms</h3>
+                <a href="privacy-policy.html">Privacy Policy</a> |
+                <a href="terms-of-service.html">Terms of Service</a>
+            </div>
+            <p>Follow us on social media for updates and events.</p>
+
         </div>
-      </div>
+
+        <div>
+            <div class="copyright ">
+                <p>
+                    Copyright ©2024 Group-5 (ComputerLab) All Rights Reserved. Made by Computer Science Group-5 </p>
+
+                <img src="image/github.png" alt="github Logo " />
+            </div>
+        </div>
     </footer>
-  </body>
+</body>
+
 </html>
