--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <!-- header -->
         <nav>
             <div class="logo">
-                <a href=""> <img src="image/logo.jpeg" alt=""></a>
+                <a href=""> <img src="image/logo.jpg" alt=""></a>
             </div>
             <ul>
 
@@ -40,7 +40,7 @@
         <div id="home">
             <h2>Welcome to Arsi University Computer Lab Management System</h2>
             <p>This system helps manage the computer labs efficiently and effectively.</p>
-            
+
         </div>
     </section>
     <section>
