add pseudo class

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <a href=" # ">About</a>
                 </li>
                 <li>
-                    <a href=" # ">Contact</a>
+                    <a href=" #contact ">Contact</a>
                 </li>
                 <li>
                     <a href=" # ">Service</a>
@@ -31,6 +31,7 @@
                 <li>
                     <a href=" # ">Student</a>
                 </li>
+                <li><a href="#schedule">Schedule</a></li>
             </ul>
         </nav>
     </header>
@@ -49,11 +50,16 @@
             <!-- About section -->
             <h2>About Us</h2>
             <p>
-                The Arsi University Computer Lab Management System is designed to enhance the experience of students and staff by providing a seamless and efficient way to manage computer lab resources. Our goal is to create a platform that not only schedules and tracks
-                lab usage but also ensures the labs are equipped with cutting-edge technology to support innovative learning and research.
+                The Arsi University Computer Lab Management System is designed to enhance the experience of students and
+                staff by providing a seamless and efficient way to manage computer lab resources. Our goal is to create
+                a platform that not only schedules and tracks
+                lab usage but also ensures the labs are equipped with cutting-edge technology to support innovative
+                learning and research.
             </p>
             <p>
-                The system offers a user-friendly interface for managing lab schedules, monitoring equipment, and fostering collaboration among students and faculty members. With a commitment to promoting digital literacy and technological excellence, our lab system
+                The system offers a user-friendly interface for managing lab schedules, monitoring equipment, and
+                fostering collaboration among students and faculty members. With a commitment to promoting digital
+                literacy and technological excellence, our lab system
                 is a cornerstone of modern education at Arsi University.
             </p>
         </section>
@@ -133,7 +139,8 @@
                 <!-- Achievement section -->
 
 
-                <p>Awardeh3> best Lab of the Year 2025</h3>d for excellence in education and resource management at Arsi University</p>
+                <p>Awardeh3> best Lab of the Year 2025</h3>d for excellence in education and resource management at Arsi
+                    University</p>
 
 
 
@@ -199,7 +206,7 @@
         <!-- Form/Contact Secion -->
         <div class="container">
 
-            <form>
+            <form id="contact">
                 <h3>Contact form</h3>
                 <input type="text" id="FirstName" placeholder="First Name" required>
                 <br>
