--- a/index.html
+++ b/index.html
@@ -68,6 +68,20 @@
 
     <section>
         <!-- Service -->
+        <section class="services">
+            <h2>Our Services</h2>
+            <p>At our computer lab, we offer a variety of services to meet your computing needs. Whether you're a student, a professional, or just looking to learn, we have something for everyone!</p>
+            <div class="service-list">
+                <div class="service-item">
+
+
+
+
+
+
+
+
+
     </section>
     <!-- schedule section -->
     <section id="schedule">
