--- a/index.html
+++ b/index.html
@@ -67,7 +67,38 @@
     </section>
 
     <section>
-        <!-- Service -->
+        <section class="services">
+            <h2>Our Services</h2>
+            <p>At our computer lab, we offer a variety of services to meet your computing needs. Whether you're a student, a professional, or just looking to learn, we have something for everyone!</p>
+            <div class="service-list">
+                <div class="service-item">
+                    <h3>Open Access Computers</h3>
+                    <p>Access high-performance computers equipped with the latest software for your projects and studies.</p>
+                </div>
+                <div class="service-item">
+                    <h3>Printing and Scanning</h3>
+                    <p>Utilize our printing and scanning services for all your document needs, with options for color and black & white.</p>
+                </div>
+                <div class="service-item">
+                    <h3>Workshops and Training</h3>
+                    <p>Join our workshops to enhance your skills in various software applications and programming languages.</p>
+                </div>
+                <div class="service-item">
+                    <h3>Technical Support</h3>
+                    <p>Get assistance from our knowledgeable staff for any technical issues or questions you may have.</p>
+                </div>
+                <div class="service-item">
+                    <h3>Group Study Rooms</h3>
+                    <p>Reserve a private room for group study sessions, equipped with computers and collaborative tools.</p>
+                </div>
+            </div>
+        </section>
+    </body>
+    </html><!-- Service -->
+
+
+
+
     </section>
     <!-- schedule section -->
     <section id="schedule">
