--- a/index.html
+++ b/index.html
@@ -9,13 +9,16 @@
 </head>
 
 <body>
+
     <header>
         <!-- header -->
         <nav>
+
             <div class="logo">
-                <a href=""> <img src="image/logo.jpg" alt=""></a>
+                <img src="image/logo.jpg" alt="">
+                <h1>Arsi UniversityComputer Lab</h1>
             </div>
-            <ul>
+            <ul class="internal-wrapper">
 
                 <a href=" # ">Home</a>
                 </li>
@@ -50,16 +53,11 @@
             <!-- About section -->
             <h2>About Us</h2>
             <p>
-                The Arsi University Computer Lab Management System is designed to enhance the experience of students and
-                staff by providing a seamless and efficient way to manage computer lab resources. Our goal is to create
-                a platform that not only schedules and tracks
-                lab usage but also ensures the labs are equipped with cutting-edge technology to support innovative
-                learning and research.
+                The Arsi University Computer Lab Management System is designed to enhance the experience of students and staff by providing a seamless and efficient way to manage computer lab resources. Our goal is to create a platform that not only schedules and tracks
+                lab usage but also ensures the labs are equipped with cutting-edge technology to support innovative learning and research.
             </p>
             <p>
-                The system offers a user-friendly interface for managing lab schedules, monitoring equipment, and
-                fostering collaboration among students and faculty members. With a commitment to promoting digital
-                literacy and technological excellence, our lab system
+                The system offers a user-friendly interface for managing lab schedules, monitoring equipment, and fostering collaboration among students and faculty members. With a commitment to promoting digital literacy and technological excellence, our lab system
                 is a cornerstone of modern education at Arsi University.
             </p>
         </section>
@@ -139,8 +137,8 @@
                 <!-- Achievement section -->
 
 
-                <p>Awardeh3> best Lab of the Year 2025</h3>d for excellence in education and resource management at Arsi
-                    University</p>
+                <p>Awardeh3> best Lab of the Year 2025</h3>d for excellence in education and resource management at Arsi University
+                </p>
 
 
 
