add background color

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             <h2 class="style">Our Goals</h2>
 
             <div class="content">
-                <h3> Provide Access to Cutting-Edge Technology</h3>
+                <h3 style="list-style: disc;"> Provide Access to Cutting-Edge Technology</h3>
                 <p>Ensure students have access to the latest hardware and software for learning and innovation.</p>
 
 
