--- a/index.html
+++ b/index.html
@@ -68,37 +68,66 @@
 
     <section>
         <section class="services">
-            <h2>Our Services</h2>
-            <p>At our computer lab, we offer a variety of services to meet your computing needs. Whether you're a student, a professional, or just looking to learn, we have something for everyone!</p>
-            <div class="service-list">
-                <div class="service-item">
-                    <h3>Open Access Computers</h3>
-                    <p>Access high-performance computers equipped with the latest software for your projects and studies.</p>
-                </div>
-                <div class="service-item">
-                    <h3>Printing and Scanning</h3>
-                    <p>Utilize our printing and scanning services for all your document needs, with options for color and black & white.</p>
-                </div>
-                <div class="service-item">
-                    <h3>Workshops and Training</h3>
-                    <p>Join our workshops to enhance your skills in various software applications and programming languages.</p>
-                </div>
-                <div class="service-item">
-                    <h3>Technical Support</h3>
-                    <p>Get assistance from our knowledgeable staff for any technical issues or questions you may have.</p>
-                </div>
-                <div class="service-item">
-                    <h3>Group Study Rooms</h3>
-                    <p>Reserve a private room for group study sessions, equipped with computers and collaborative tools.</p>
-                </div>
-            </div>
-        </section>
-    </body>
-    </html><!-- Service -->
+        <section class="services-section">
+    <h2>Our Services</h2>
+    <p>Explore the wide range of services we offer at our computer lab to support your learning and projects.</p>
+    
+    <div class="services-container">
+      <!-- Service 1: Computer Access -->
+      <div class="service-card">
+        <div class="service-content">
+          <div class="service-image">
+            <img src="computer-access-image.jpg" alt="Computer Access">
+          </div>
+          <div class="service-note">
+            <h3 class="service-title">Computer Access</h3>
+            <p class="service-description">High-performance computers available for research, programming, and general use and etc. Whether you are working on a class project, conducting online research, or practicing coding, our systems are designed to meet your needs.</p>
+          </div>
+        </div>
+      </div>
 
+      <!-- Service 2: High-Speed Internet -->
+      <div class="service-card">
+        <div class="service-content">
+          <div class="service-image">
+            <img src="high-speed-internet-image.jpg" alt="High-Speed Internet">
+          </div>
+          <div class="service-note">
+            <h3 class="service-title">High-Speed Internet</h3>
+            <p class="service-description">Enjoy seamless browsing and downloads with our fast and secure internet connection. Ideal for streaming educational videos, attending online courses, or downloading essential materials without interruptions.</p>
+          </div>
+        </div>
+      </div>
 
+      <!-- Service 3: Software Tutorials -->
+      <div class="service-card">
+        <div class="service-content">
+          <div class="service-image">
+            <img src="software-tutorials-image.jpg" alt="Software Tutorials">
+          </div>
+          <div class="service-note">
+            <h3 class="service-title">Software Tutorials</h3>
+            <p class="service-description">Get guidance and tutorials on popular software and programming tools. Our tutorials cover beginner to advanced levels, including topics like word processing, spreadsheets, and coding languages.</p>
+          </div>
+        </div>
+      </div>
 
-
+      <!-- Service 4: Technical Support -->
+      <div class="service-card">
+        <div class="service-content">
+          <div class="service-image">
+            <img src="technical-support-image.jpg" alt="Technical Support">
+          </div>
+          <div class="service-note">
+            <h3 class="service-title">Technical Support</h3>
+            <p class="service-description">Our experts are here to assist with hardware or software issues. Whether it’s troubleshooting a problem or providing advice on upgrades, we’ve got you covered.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+</body>
+</html>
     </section>
     <!-- schedule section -->
     <section id="schedule">
