--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                   </div>
                   <div class="service-note">
                     <h3 class="service-title">Technical Support</h3>
-                    <p class="service-description">Our experts are here to assist with hardware or software issues. Whether it’s troubleshooting a problem or providing advice on upgrades, we’ve got you covered.</p>
+                    <p class="service-description">Our experts are here to assist with hardware or software issues. Whether it’s troubleshooting a problem or providing advice on upgrades, we have got you covered.</p>
                   </div>
                 </div>
               </div>
