--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
               <div class="service-card">
                 <div class="service-content">
                   <div class="service-image">
-                    <img src="computer-access-image.jpg" alt="Computer Access">
+                    <img src="image\photo_2025-01-27_23-49-59.jpg" alt="Computer Access">
                   </div>
                   <div class="service-note">
                     <h3 class="service-title">Computer Access</h3>
