--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
               <div class="service-card">
                 <div class="service-content">
                   <div class="service-image">
-                    <img src="software-tutorials-image.jpg" alt="Software Tutorials">
+                    <img src="image\photo_2025-01-27_23-50-09.jpg" alt="Software Tutorials">
                   </div>
                   <div class="service-note">
                     <h3 class="service-title">Software Tutorials</h3>
