--- a/index.html
+++ b/index.html
@@ -91,13 +91,11 @@
               <!-- Service 2: High-Speed Internet -->
               <div class="service-card">
                 <div class="service-content">
-                  <div class="service-image">
-                    <img src="high-speed-internet-image.jpg" alt="High-Speed Internet">
-                  </div>
-                  <div class="service-note">
-                    <h3 class="service-title">High-Speed Internet</h3>
-                    <p class="service-description">Enjoy seamless browsing and downloads with our fast and secure internet connection. Ideal for streaming educational videos, attending online courses, or downloading essential materials without interruptions.</p>
-                  </div>
+                    <div class="service-card">
+                        <div class="service-icon">📡</div>
+                        <h3 class="service-title">High-Speed Internet</h3>
+                        <p class="service-description">Enjoy seamless browsing and downloads with our fast and secure internet connection. Ideal for streaming educational videos, attending online courses, or downloading essential materials without interruptions.</p>
+                      </div>
                 </div>
               </div>
         
@@ -120,9 +118,10 @@
                   <div class="service-image">
                     <img src="technical-support-image.jpg" alt="Technical Support">
                   </div>
-                  <div class="service-note">
+                  <div class="service-card">
+                    <div class="service-icon">🔧</div>
                     <h3 class="service-title">Technical Support</h3>
-                    <p class="service-description">Our experts are here to assist with hardware or software issues. Whether it’s troubleshooting a problem or providing advice on upgrades, we have got you covered.</p>
+                    <p class="service-description">Our experts are here to assist with hardware or software issues. Whether it’s troubleshooting a problem or providing advice on upgrades, we’ve got you covered.</p>
                   </div>
                 </div>
               </div>
