--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                   </div>
                   <div class="service-note">
                     <h3 class="service-title">Software Tutorials</h3>
-                    <p class="service-description">Get guidance and tutorials on popular software and programming tools. Our tutorials cover beginner to advanced levels, including topics like word processing, spreadsheets, and coding languages.</p>
+                    <p class="service-description">Get guidance and tutorial on popular software and programming tools. Our tutorials cover beginner to advanced levels, including topics like word processing, spreadsheets, and coding languages.</p>
                   </div>
                 </div>
               </div>
